tests/chainsaw/disallow-ephemeral-containers/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-no-ephemeral
spec:
  containers:
  - name: main
    image: busybox:1.35
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      runAsUser: 1000
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
