tests/chainsaw/disallow-ephemeral-containers/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-ephemeral-containers
spec:
  steps:
  - name: create a pod with ephemeral containers
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a pod without ephemeral containers
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
